# lite-rag-app

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  main.py  pyproject.toml  setup-dev.sh
.github/workflows/: quality_check.yml
docker/: .env.example  .gitignore  compose.yml
routes/: base.py
src/: .env.example  .gitignore  alembic.ini  config.py  dependencies.py  main.py  requirements-dev.txt  requirements.txt  setup-dev.sh
src/controllers/: __init__.py  assets.py  base.py  documents.py  files.py  projects.py  rag.py  vectors.py
src/databases/: __init__.py
src/databases/lite_rag/: __init__.py
src/databases/lite_rag/alembic/: env.py
src/databases/lite_rag/schemas/: __init__.py  asset.py  base.py  chunk.py  file.py  (+1 more)
src/llm/: __init__.py
src/llm/controllers/: __init__.py  factory.py  templates.py
src/llm/models/: __init__.py  base.py
src/llm/providers/: __init__.py  cohere_provider.py  openai_provider.py
src/llm/templates/: __init__.py
src/models/: __init__.py  asset.py  base.py  chunk.py  file.py  project.py  vector.py
src/models/enums/: __init__.py  assets.py  collections.py  documents.py  log_level.py  responses.py
src/routes/: __init__.py  assets.py  base.py  documents.py  files.py  projects.py  rag.py  vectors.py
src/routes/schemas/: __init__.py  assets.py  documents.py  files.py  projects.py  rag.py  vectors.py
src/vectordb/: __init__.py
src/vectordb/controllers/: __init__.py  factory.py
src/vectordb/models/: __init__.py  base.py
src/vectordb/providers/: __init__.py  qdrant_provider.py
(+16 files in other folders)
