[project]
name = "lite-rag-app"
version = "3.0.0"
description = "A lightweight RAG application"
requires-python = ">=3.12"

[tool.black]
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
per-file-ignores = [
    "__init__.py:F401"
]
extend-ignore = ["E203", "W503"]
